--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <title>preentrega 2 | inicio</title>
+    <title>preentrega 3 | inicio</title>
 </head>
 
 <body>
@@ -25,10 +25,6 @@
                 <ul class="ul">
                     <!-- li = list items / items de likstas. -->
                     <!-- enlaces relativos -->
-                    <div class="respmenu">
-                        <input type="checkbox">
-                        <i class="fas fa-bars"></i>
-                        <i class="fas fa-times"></i>
                         <nav>
                             <ul>
                                 <li><a href="index.html">inicio</a></li>
@@ -37,7 +33,9 @@
                                 <li><a href="./pagues/condiciones.html">bases y condiciones</a></li>
                                 <li><a href="./pagues/tablas.html">tabla de colores</a></li>
                             </ul>
+                    </div>
                 </ul>
+            </nav>
     </header>
     <main class="main">
         <h1>Tapiceria RC</h1>
